se agrega funcionalidad para guardar usuario nuevo se realizar modificaciones en mapeos de clases de entidad

--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -12,6 +12,7 @@
         	<h:form>
 	            <p:panelMenu style="text-align:left;">
 	                <p:submenu label="Administracion">
+                        <p:menuitem value="Usuarios" url="/pages/seguridad/lista.xhtml"/>
 	                </p:submenu>
                     <p:submenu label="Proyectos">
                     	<p:menuitem value="Lista de Proyectos" url="/pages/registro/lista.xhtml"/>
